# SkyMarket

./: .env.example  README.md  config.json  pyproject.toml
skymarket/: __init__.py  broker.py  config.py  main.py  markets.py  order_manager.py  storage.py  strategy.py
tests/: test_config.py  test_markets.py  test_order_manager.py  test_storage.py
